[metadata]
name = geonode-sos
version = 0.0.1
author = geosolutions-it
author_email = info@geosolutionsgroup.com
url = https://github.com/GeoNode/geonode-contribs/sos
project_urls =
    Bug Tracker = https://github.com/GeoNode/geonode-contribs/sos/issues
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License