[metadata]
name = geonode-keycloak-user-group-sync
version = 0.1
description = A Django app to create GeoNode users and groups from Keycloak.
long_description = file: README.rst
url = https://geoint.africa
author = Werner Raath
author_email = werner123raath@gmail.com
classifiers =
    Environment :: Web Environment
    Framework :: Geonde
    Framework :: Geonode :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
